updates styles throughout and added flip clock countdown

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,34 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+:root {
+  /* Default (desktop) styles */
+  --fcc-digit-block-width: 55px;
+  --fcc-digit-block-height: 70px;
+  --fcc-digit-font-size: 30px;
+  --fcc-background: #8479D9;
+  --fcc-digit-color: white;
+  --fcc-divider-color: #edd9eb; 
+}
+
+/* Mobile */
+@media (max-width: 640px) {
+  :root {
+    --fcc-digit-block-width: 30px;
+    --fcc-digit-block-height: 45px;
+    --fcc-digit-font-size: 25px;
+  }
+}
+
+/* Small phones */
+@media (max-width: 360px) {
+  :root {
+    --fcc-digit-block-width: 25px;
+    --fcc-digit-block-height: 45px;
+    --fcc-digit-font-size: 25px;
+  }
+}
+
+
